--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title> VOTRE TITRE </title>			
+	</head>
+	<body>
+		<h1>Explorateur Bitcoin</h1>
+		<h2>James BOND (james.bond@devinci.fr)</h2>
+		<h2>James BOND (james.bond@devinci.fr)</h2>
+		<h2>Explorateur Bitcoin</h1>
+	</body>
 </html>
