--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> VOTRE TITRE </title>			
+		<title> EXPLORER BALBOONI ZOCCARATO </title>			
 	</head>
 	<body>
 		<h1>Explorateur Bitcoin</h1>
-		<h2>James BOND (james.bond@devinci.fr)</h2>
-		<h2>James BOND (james.bond@devinci.fr)</h2>
+		<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
+		<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
 		<h2>Explorateur Bitcoin</h1>
 	</body>
 </html>
