--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> EXPLORER BALBOONI ZOCCARATO </title>			
+		<title> EXPLORER BALBONI ZOCCARATO </title>			
 	</head>
 	<body>
 		<h1>Explorateur Bitcoin</h1>
