--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 		<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 		<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
 		<h2>Explorateur Bitcoin</h1>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="../custom.js"></script>
 	</body>
 </html>
