--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		<title> EXPLORER BALBONI ZOCCARATO </title>			
 	</head>
 	<body>
-		<h1>Explorateur Bitcoin</h1>
-		<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
-		<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
-		<h2>Explorateur Bitcoin</h1>
+		<div class="container">
+			<h1>Explorateur Bitcoin</h1>
+			<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
+			<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
+			<h2>Explorateur Bitcoin</h2>
+		</div>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="../custom.js"></script>
