--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 			<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
 			<h2>Explorateur Bitcoin</h2>
 		</div>
-		<div class="panel panel-default">
-  			<div class="panel-body">A Basic Panel</div>
+		<div class="panel-group">
+			<div class="panel panel-default">
+    			<div class="panel-body">Panel Content</div>
+  			</div>
+  			<div class="panel panel-default">
+   				<div class="panel-body">Panel Content</div>
+  			</div>
 		</div>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
