--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<h1>Explorateur Bitcoin</h1> <div align="right"><button type="button" class="btn btn-lg btn-success">DONATE</button></div> 
+				<h1>Explorateur Bitcoin</h1>
+				<div align="right"><button type="button" class="btn btn-lg btn-success">DONATE</button></div> 
 				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
 				<h2>Explorateur Bitcoin</h2>
