--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title> EXPLORER BALBONI ZOCCARATO </title>			
 	</head>
 	<body>
+		<img src="nicola.jpg" alt="Smiley face" height="42" width="42"> 
 		<div class="container">
 			<div class="jumbotron">
 				<h1>Explorateur Bitcoin</h1>
