--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title> EXPLORER BALBONI ZOCCARATO </title>			
 	</head>
 	<body>
-		<img src="nicola.jpg" alt="Nicola Zoccarato" height="42" width="42"> 
-		<img src="Matteo.JPG" alt="Matteo Balboni" height="42" width="42"> 
+		<img src="nicola.jpg" alt="Nicola ZOCCARATO" height="780" width="780"> 
+		<img src="Matteo.JPG" alt="Matteo BALBONI" height="42" width="42"> 
 		<div class="container">
 			<div class="jumbotron">
 				<h1>Explorateur Bitcoin</h1>
