--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<img src="nicola.jpg" alt="Nicola ZOCCARATO" height="12" width="12"> 
-		<img src="Matteo.JPG" alt="Matteo BALBONI" height="42" width="42"> 
+		<img src="matteo.JPG" alt="Matteo BALBONI" height="42" width="42"> 
 		<div class="container">
 			<div class="jumbotron">
 				<h1>Explorateur Bitcoin</h1>
