--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				<h2>Explorateur Bitcoin</h2>
       		</div>
 		</div>
-		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" align="left"> 
-		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="200" width="250" align="left"> 
+		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="400" align="left"> 
+		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="500" align="left"> 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
