--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<h2>Explorateur Bitcoin</h2>
       		</div>
 		</div>
-		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="408" align="left"> 
+		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="408" align="left"> <br>
 		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="533" align="left"> 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
