--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<h2>Explorateur Bitcoin</h2>
       		</div>
 		</div>
-		<p><img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="408" align="left"></p>
-		<p><img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="533" align="left"></p>
+		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="408" align="left"><br/>
+		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="533" align="left"><br/>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
