--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="408" align="left"><br clear="all" />
 		<br>
 		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="533" align="left"><br clear="all" />
-		<font color="grey">Link</font>
+		<br>
+		<div align="center"> <font color="grey"> <h1> Nicola ZOCCARATO </h1> </font> </div>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
