--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h2>Explorateur Bitcoin</h2>
       		</div>
 		</div>
-		<img src="img\nicola.JPG" alt="Nicola ZOCCARATO" height="400" width="293" align="left"><br clear="all" />
+		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="293" align="left"><br clear="all" />
 		<br>
 		<img src="img\matteo.jpg" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
 		<br>
