--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="293" align="left"><br clear="all" />
 		<br>
-		<img src="img\matteo.jpg" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
+		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
 		<br>
 		<div align="center"> <font color="grey"> <h1> Nicola ZOCCARATO </h1> </font> </div>
 		<div align="center"> <font color="grey"> <h1> Matteo BALBONI </h1> </font> </div>
