--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="style/style.css">
+		<link rel="stylesheet" href="style/font-awesome/css/font-awesome.min.css">
 		<title> EXPLORER BALBONI ZOCCARATO </title>			
 	</head>
 	<body>
