--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
 		<br>
 		<div align="center"> <h1> Nicola ZOCCARATO </h1> </div>
+		<i class="fa fa-linkedin" aria-hidden="true"></i>
 		<div align="center"> <h1> Matteo BALBONI </h1> </div>
+		<i class="fa fa-linkedin" aria-hidden="true"></i>
+
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
