--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<br>
 		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
 		<br>
-		<div align="center"> <h1> Nicola ZOCCARATO </h1> </div>
+		<div align="center"> <h1 id="different">Nicola ZOCCARATO</h1> </div>
 		<i class="fa fa-linkedin" aria-hidden="true"></i>
-		<div align="center"> <h1> Matteo BALBONI </h1> </div>
+		<div align="center"> <h1 id="different">Matteo BALBONI</h1> </div>
 		<i class="fa fa-linkedin" aria-hidden="true"></i>
 
 
