--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
 		<br>
 		<div align="center"> <h1 id="different">Nicola ZOCCARATO</h1> </div>
-		<div align="center"> <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i> </div>
+		<div align="center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"> <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<div align="center"> <h1 id="different">Matteo BALBONI</h1> </div>
-		<div align="center"> <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i> </div>
+		<div align="center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"> <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
