--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 				<h2>Explorateur Bitcoin</h2>
       		</div>
 		</div>
-		<img src="img\nicola.jpg" alt="Nicola ZOCCARATO" height="400" width="293" align="left"><br clear="all" />
+		<img id="nicola" src="img\nicola.jpg" alt="Nicola ZOCCARATO"><br clear="all" />
 		<br>
-		<img src="img\matteo.JPG" alt="Matteo BALBONI" height="400" width="400" align="left"><br clear="all" />
+		<img id="matteo" src="img\matteo.JPG" alt="Matteo BALBONI"><br clear="all" />
 		<br>
-		<div align="center"> <h1 id="different">Nicola ZOCCARATO</h1> </div>
-		<div align="center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"> <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
-		<div align="center"> <h1 id="different">Matteo BALBONI</h1> </div>
-		<div align="center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"> <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div> <h1 id="different">Nicola ZOCCARATO</h1> </div>
+		<div> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div> <h1 id="different">Matteo BALBONI</h1> </div>
+		<div> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
 
