--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<br>
 		<img id="matteo" src="img\matteo.jpg" alt="Matteo BALBONI"><br clear="all" />
 		<br>
-		<div> <h1 id="grey">Nicola ZOCCARATO</h1> </div>
-		<div> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
-		<div> <h1 id="grey">Matteo BALBONI</h1> </div>
-		<div> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div> <h1 class="grey">Nicola ZOCCARATO</h1> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div> <h1 class="grey">Matteo BALBONI</h1> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
 
