--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<br>
 		<div class="container">
 			<div class="jumbotron">
+				<button type="button" class="btn btn-lg btn-success">DONATE</button> 
 				<h1>Explorateur Bitcoin</h1>
-				<div><button type="button" class="btn btn-lg btn-success">DONATE</button></div> 
 				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
 				<h2>Explorateur Bitcoin</h2>
@@ -19,11 +19,11 @@
 		</div>
 		<img id="nicola" src="img\nicola.jpg" alt="Nicola ZOCCARATO"><br clear="all" />
 		<br>
-		<img id="matteo" src="img\matteo.JPG" alt="Matteo BALBONI"><br clear="all" />
+		<img id="matteo" src="img\matteo.jpg" alt="Matteo BALBONI"><br clear="all" />
 		<br>
-		<div> <h1 class="grey">Nicola ZOCCARATO</h1> </div>
+		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
-		<div> <h1 class="grey">Matteo BALBONI</h1> </div>
+		<h1 class="grey">Matteo BALBONI</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
