--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Explorateur Bitcoin</a>
+					<a class="navbar-brand" href="#"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a>
+					<!--<a class="navbar-brand" href="#">Explorateur Bitcoin</a>-->
 				</div>
 		        
 		        <div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#bitcoin">BitCoin</a></li>
+						<li><a href="#bitcoin">Bitcoin</a></li>
 		            	</li>
 					</ul>
 		        </div>
