--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="style/style.css">
+		<link rel="stylesheet" type="text/css" href="https://github.com/MatteoBalboni/MatteoBalboni.github.io/tree/master/style/style.css">
 		<link rel="stylesheet" href="style/font-awesome/css/font-awesome.min.css">
 		<title> EXPLORER BALBONI ZOCCARATO </title>			
 	</head>
