--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -3,13 +3,11 @@
 	<head>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="https://github.com/MatteoBalboni/MatteoBalboni.github.io/tree/master/style/style.css">
-		<link rel="stylesheet" href="style/font-awesome/css/font-awesome.min.css">
-		<title> EXPLORER BALBONI ZOCCARATO </title>			
+		<link rel="stylesheet" type="text/css" href="../style/style.css">
+		<link rel="stylesheet" href="../style/font-awesome/css/font-awesome.min.css">
+		<title> EXPLORATEUR BITCOIN </title>			
 	</head>
 	<body>
-		<br>
-
 		<!-- Navbar -->
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container">
@@ -36,17 +34,9 @@
 
 		<div class="container">
 			<div class="jumbotron">
-				<button type="button" class="btn btn-lg btn-success">DONATE</button> 
 				<h1>Explorateur Bitcoin</h1>
-				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
-				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
-				<h2>Explorateur Bitcoin</h2>
       		</div>
 		</div>
-		<img id="nicola" src="img\nicola.jpg" alt="Nicola ZOCCARATO"><br clear="all" />
-		<br>
-		<img id="matteo" src="img\matteo1.jpg" alt="Matteo BALBONI"><br clear="all" />
-		<br>
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
