--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -18,13 +18,12 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Explorateur Bitcoin</a>
 					<!--<a class="navbar-brand" href="#">Explorateur Bitcoin</a>-->
 				</div>
 		        
 		        <div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
+						<li class="active"><a href="https://matteobalboni.github.io/#bitcoin" title="Home"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="#bitcoin"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
 		            	</li>
 					</ul>
