--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -24,7 +24,7 @@
 		        <div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="https://matteobalboni.github.io/#bitcoin" title="Home"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
-						<li><a href="#bitcoin"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
+						<li><a href="https://matteobalboni.github.io//bitcoin/#bitcoin" title="Explorateur"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
 		            	</li>
 					</ul>
 		        </div>
