--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="../style/style.css">
 		<link rel="stylesheet" href="../style/font-awesome/css/font-awesome.min.css">
+		<script type="text/javascript" src="../js/web.js" defer></script>
 		<title> EXPLORATEUR BITCOIN </title>			
 	</head>
 	<body>
@@ -40,6 +41,10 @@
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+
+
+		<span id="n_blocks"></span>
+ 		blocks
 
 
 
