--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -43,7 +43,7 @@
 		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
-		<span id="n_blocks"></span>
+		<span id="number_blocks"></span>
  		blocks
 
 
