--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -37,14 +37,26 @@
 				<h1>Explorateur Bitcoin</h1>
       		</div>
 		</div>
+
+		<div class="row">
+			<div class="col-xs-3">
+				<i class="fa fa-th fa-5x"></i>
+			</div>
+			<div class="col-xs-9 text-right">
+				<h2>
+					<span id="number_blocks"></span> blocks
+				</h2>
+			</div>
+		</div>
+
+		
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
-		<span id="number_blocks"></span>
- 		blocks
+
 
 
 
