--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -38,18 +38,23 @@
       		</div>
 		</div>
 
-		<div class="row">
-			<div class="col-xs-3">
-				<i class="fa fa-th fa-5x"></i>
-			</div>
-			<div class="col-xs-9 text-right">
-				<h2>
-					<span id="number_blocks"></span> blocks
-				</h2>
+		<div class="col-lg-9 col-md-9">
+			<div class="panel panel-yellow">
+				<div class="panel-heading">
+					<div class="row">
+						<div class="col-xs-3">
+							<i class="fa fa-th fa-5x"></i>
+						</div>
+						<div class="col-xs-9 text-right">
+							<h2>
+								<span id="number_blocks"></span> blocks
+							</h2>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
-		
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
