--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -38,9 +38,10 @@
       		</div>
 		</div>
 
-		<div class="col-lg-9 col-md-9">
-			<div class="panel panel-yellow">
-				<div class="panel-heading">
+
+		<!--<a Number of blocks </a>-->
+		<div class="container">
+			<div class="jumbotron">
 					<div class="row">
 						<div class="col-xs-3">
 							<i class="fa fa-th fa-5x"></i>
@@ -51,9 +52,9 @@
 							</h2>
 						</div>
 					</div>
-				</div>
-			</div>
+      		</div>
 		</div>
+
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
