--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -34,7 +34,7 @@
 
 		<div class="container">
 			<div class="jumbotron">
-				<h1>Explorateur Bitcoin</h1>
+				<h1 class="grey-left">Explorateur Bitcoin</h1>
       		</div>
 		</div>
 
