--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="container">
 			<div class="jumbotron">
 				<button type="button" class="btn btn-lg btn-success">DONATE</button> 
-				<h1>Explorateur Bitcoin</h1>
+				<h1 class="grey-left">Explorateur Bitcoin</h1>
 				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
 				<h2>Explorateur Bitcoin</h2>
