--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -55,6 +55,16 @@
       		</div>
 		</div>
 
+		<div class="container">
+			<div class="jumbotron">
+				<div class="row">
+					<input type="text" class="fff" id="input-block" value="Hash / Hauteur" onclick="javascript:this.value=''"/>
+					<a href="#resultat" class="button" id="btn-block">Block</a>
+				</div>
+				<div class="resultat" id="resultat">
+				</div>				
+			</div>
+		</div>>
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
