--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -58,10 +58,10 @@
 		<div class="container">
 			<div class="jumbotron">
 				<div class="row">
-					<input type="text" class="fff" id="input-block" value="Hash / Hauteur" onclick="javascript:this.value=''"/>
-					<a href="#resultat" class="button" id="btn-block">Block</a>
+					<h2> <input type="text" class="fff" id="input-block" value="Hash" onclick="javascript:this.value=''"/> </h2>
+					<h2> <a href="#result" class="button" id="btn-block">Block</a> </h2>
 				</div>
-				<div class="resultat" id="resultat">
+				<div class="result" id="result">
 				</div>				
 			</div>
 		</div>>
