--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -55,16 +55,26 @@
       		</div>
 		</div>
 
+
 		<div class="container">
 			<div class="jumbotron">
 				<div class="row">
-					<h2> <input type="text" class="fff" id="input-block" value="Hash" onclick="javascript:this.value=''"/> </h2>
-					<h2> <a href="#result" class="button" id="btn-block">Block</a> </h2>
+
+					<section>
+					<h2> <input id="input" value="# Block" onclick="javascript:this.value=''"/> </h2>
+					<h2> <a href="#result" class="button" id="single-block">Block</a> </h2>
+					</section>
+
+					<section>
+					<h2> <input id="input1" value="Hash" onclick="javascript:this.value=''" /> </h2>
+					<h2> <a href="#result" class="button" id="transaction">Transaction</a> </h2>
+					</section>
+
 				</div>
-				<div class="result" id="result">
+				<div id="result">
 				</div>				
 			</div>
-		</div>>
+
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
