--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -60,20 +60,20 @@
 			<div class="jumbotron">
 				<div class="row">
 
-					<section>
 					<h2> <input id="input" value="# Block" onclick="javascript:this.value=''"/> </h2>
 					<h2> <a href="#result" class="button" id="single-block">Block</a> </h2>
-					</section>
 
-					<section>
-					<h2> <input id="input1" value="Hash" onclick="javascript:this.value=''" /> </h2>
+					<h2> <input id="input1" value="ID Transaction" onclick="javascript:this.value=''" /> </h2>
 					<h2> <a href="#result" class="button" id="transaction">Transaction</a> </h2>
-					</section>
+
+					<h2> <input id="input2" value="Adress Bitcoin" onclick="javascript:this.value=''" /> </h2>
+					<h2> <a href="#result" class="button" id="address">Address Bitcoin</a> </h2>
 
 				</div>
 				<div id="result">
 				</div>				
 			</div>
+		</div>
 
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
