--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -60,14 +60,20 @@
 			<div class="jumbotron">
 				<div class="row">
 
-					<h2> <input id="input" value="# Block" onclick="javascript:this.value=''"/> </h2>
-					<h2> <a href="#result" class="button" id="single-block">Block</a> </h2>
+					<section>
+					<h1 class="grey-left">Call a block number</h1>
+					<h2> <input id="input" value="# Block" onclick="javascript:this.value=''"/> <a href="#result" class="button" id="single-block"> GO</a> </h2>
+					</section>
 
-					<h2> <input id="input1" value="ID Transaction" onclick="javascript:this.value=''" /> </h2>
-					<h2> <a href="#result" class="button" id="transaction">Transaction</a> </h2>
+					<section>
+					<h1 class="grey-left">Call a transaction</h1>
+					<h2> <input id="input1" value="ID Transaction" onclick="javascript:this.value=''" /> <a href="#result" class="button" id="transaction"> GO</a> </h2>
+					</section>
 
-					<h2> <input id="input2" value="Adress Bitcoin" onclick="javascript:this.value=''" /> </h2>
-					<h2> <a href="#result" class="button" id="address">Address Bitcoin</a> </h2>
+					<section>
+					<h1 class="grey-left">Call an address</h1>
+					<h2> <input id="input2" value="Adress Bitcoin" onclick="javascript:this.value=''" /> <a href="#result" class="button" id="address"> GO</a> </h2>
+					</section>
 
 				</div>
 				<div id="result">
