--- a/token/index.html
+++ b/token/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="../style/style.css">
 		<link rel="stylesheet" href="../style/font-awesome/css/font-awesome.min.css">
 		<script type="text/javascript" src="../js/web.js" defer></script>
-		<title> EXPLORATEUR BITCOIN </title>			
+		<title> TOKEN ETHEREUM </title>			
 	</head>
 	<body>
 		<!-- Navbar -->
@@ -34,7 +34,7 @@
 
 		<div class="container">
 			<div class="jumbotron">
-				<h1 class="grey-left">Explorateur Bitcoin</h1>
+				<h1 class="grey-left">Token Ethereum</h1>
       		</div>
 		</div>
 
