--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<h1 class="grey-left">Explorer Bitcoin</h1>
 				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
-				<h2>Explorateur Bitcoin</h2>
+				<h2>Explorer Bitcoin</h2>
       		</div>
 		</div>
 		<img id="nicola" src="img\nicola.jpg" alt="Nicola ZOCCARATO"><br clear="all" />
