--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -26,7 +26,7 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="https://matteobalboni.github.io/#bitcoin" title="Home"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//bitcoin/#bitcoin" title="Explorateur"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
-						<li><a href="https://matteobalboni.github.io//bitcoin/#token" title="Explorateur"><i class="fa fa-sort fa-1x" aria-hidden="true"></i></a></li>
+						<li><a href="https://matteobalboni.github.io//token/#token" title="Explorateur"><i class="fa fa-sort fa-1x" aria-hidden="true"></i></a></li>
 					</ul>
 		        </div>
 			</div>
