--- a/token/index.html
+++ b/token/index.html
@@ -38,18 +38,28 @@
       		</div>
 		</div>
 
-
-
+		
+		<!--<a Number of blocks </a>-->
+		<div class="container">
+			<div class="jumbotron">
+					<div class="row">
+						<div class="col-xs-3">
+							<i class="fa fa-th fa-5x"></i>
+						</div>
+						<div class="col-xs-9 text-right">
+							<h2>
+								<span id="number_blocks"></span> blocks
+							</h2>
+						</div>
+					</div>
+      		</div>
+		</div>
 
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
 		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
-
-
-
-
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
