--- a/token/index.html
+++ b/token/index.html
@@ -5,8 +5,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="../style/style.css">
 		<link rel="stylesheet" href="../style/font-awesome/css/font-awesome.min.css">
-		<script type="text/javascript" src="../js/web.js" defer></script>
-		<title> TOKEN ETHEREUM </title>			
+		<title> TOKEN ERC20 </title>			
 	</head>
 	<body>
 		<!-- Navbar -->
@@ -34,25 +33,24 @@
 
 		<div class="container">
 			<div class="jumbotron">
-				<h1 class="grey-left">Token Ethereum</h1>
+				<h1 class="grey-left">Token ERC20</h1>
       		</div>
 		</div>
 
 		
-		<!--<a Number of blocks </a>-->
 		<div class="container">
 			<div class="jumbotron">
-					<div class="row">
-						<div class="col-xs-3">
-							<i class="fa fa-th fa-5x"></i>
-						</div>
-						<div class="col-xs-9 text-right">
-							<h2>
-								<span id="number_blocks"></span> blocks
-							</h2>
-						</div>
-					</div>
-      		</div>
+				<div class="row">
+
+					<section>
+					<h2>Address of the contract: <b>0x7edbe2090cccd1fd48f872484ce8e2c25f814a1b</b> </h2>
+					<a href="https://ropsten.etherscan.io/token/0x7edbe2090cccd1fd48f872484ce8e2c25f814a1b?a=0x97f42d2f4c793a1815f7d9f2a542686b1ea701c6" target = "_blank" class="button special " id="btn-plus">En savoir plus...</a>
+					</section>
+
+				</div>
+				<div id="result">
+				</div>				
+			</div>
 		</div>
 
 
