--- a/token/index.html
+++ b/token/index.html
@@ -43,8 +43,9 @@
 				<div class="row">
 
 					<section>
-					<h2>Address of the contract: <b>0x7edbe2090cccd1fd48f872484ce8e2c25f814a1b</b> </h2>
-					<a href="https://ropsten.etherscan.io/token/0x7edbe2090cccd1fd48f872484ce8e2c25f814a1b?a=0x97f42d2f4c793a1815f7d9f2a542686b1ea701c6" target = "_blank" class="button special " id="btn-plus">En savoir plus...</a>
+					<h2>Address of the contract: <b>0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4</b> </h2>
+					<a href="https://ropsten.etherscan.io/address/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">On Ropsten</a>
+					<a href="https://ropsten.etherscan.io/token/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">On Ropsten</a>
 					</section>
 
 				</div>
