--- a/token/index.html
+++ b/token/index.html
@@ -44,8 +44,8 @@
 
 					<section>
 					<h2>Address of the contract: <b>0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4</b> </h2>
-					<a href="https://ropsten.etherscan.io/address/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">On Ropsten</a>
-					<a href="https://ropsten.etherscan.io/token/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">On Ropsten</a>
+					<h2> <a href="https://ropsten.etherscan.io/address/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">Contract overview</a> </h2>
+					<h2> <a href="https://ropsten.etherscan.io/token/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">Token summary</a> </h2>
 					</section>
 
 				</div>
