--- a/token/index.html
+++ b/token/index.html
@@ -34,6 +34,7 @@
 		<div class="container">
 			<div class="jumbotron">
 				<h1 class="grey-left">Token ERC20</h1>
+				<h2 class="grey-left">NZC</h2>
       		</div>
 		</div>
 
