--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div class="container">
 			<div class="jumbotron">
-				<button type="button" class="btn btn-lg btn-success">DONATE</button> 
+				<a href="https://faire-un-don.greenpeace.fr/?codespec=N18FD&_ga=2.254350603.269318849.1516913556-1854578128.1516913556" title="Donate"><button type="button" class="btn btn-lg btn-success">DONATE</button></a>
 				<h1 class="grey-left">Explorer Bitcoin</h1>
 				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
