--- a/token/index.html
+++ b/token/index.html
@@ -26,7 +26,7 @@
 						<li class="active"><a href="https://matteobalboni.github.io/#bitcoin" title="Home"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//bitcoin/#bitcoin" title="Explorateur"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//token/#token" title="Token"><i class="fa fa-sort fa-1x" aria-hidden="true"></i></a></li>
-						<li><a href="https://github.com/MatteoBalboni/MatteoBalboni.github.io" title="Github"><i class="fa fa-github fa-1x" aria-hidden="true"></i></a></li>
+						<li><a href="https://github.com/MatteoBalboni/MatteoBalboni.github.io" title="Github" target = "_blank"><i class="fa fa-github fa-1x" aria-hidden="true"></i></a></li>
 					</ul>
 		        </div>
 			</div>
@@ -46,8 +46,8 @@
 
 					<section>
 					<h2>Address of the contract: <b>0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4</b> </h2>
-					<h2> <a href="https://ropsten.etherscan.io/address/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">Contract overview</a> </h2>
-					<h2> <a href="https://ropsten.etherscan.io/token/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank" class="button special " id="btn-plus">Token summary</a> </h2>
+					<h2> <a href="https://ropsten.etherscan.io/address/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank">Contract overview</a> </h2>
+					<h2> <a href="https://ropsten.etherscan.io/token/0x8d775c7b5009560ac1ee3c3941190c32c3dfdaf4" target = "_blank">Token summary</a> </h2>
 					</section>
 
 				</div>
@@ -58,9 +58,9 @@
 
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
-		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn" target = "_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
-		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn" target = "_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
