--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -27,7 +27,7 @@
 						<li class="active"><a href="https://matteobalboni.github.io/#bitcoin" title="Home"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//bitcoin/#bitcoin" title="Explorateur"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//token/#token" title="Token"><i class="fa fa-sort fa-1x" aria-hidden="true"></i></a></li>
-						<li><a href="https://github.com/MatteoBalboni/MatteoBalboni.github.io" title="Github"><i class="fa fa-github fa-1x" aria-hidden="true"></i></a></li>
+						<li><a href="https://github.com/MatteoBalboni/MatteoBalboni.github.io" title="Github" target = "_blank"><i class="fa fa-github fa-1x" aria-hidden="true"></i></a></li>
 					</ul>
 		        </div>
 			</div>
@@ -84,9 +84,9 @@
 
 
 		<h1 class="grey">Nicola ZOCCARATO</h1>
-		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn" target = "_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
-		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn" target = "_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
