--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li class="active"><a href="https://matteobalboni.github.io/#bitcoin" title="Home"><i class="fa fa-home fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//bitcoin/#bitcoin" title="Explorateur"><i class="fa fa-btc fa-1x" aria-hidden="true"></i></a></li>
 						<li><a href="https://matteobalboni.github.io//token/#token" title="Token"><i class="fa fa-sort fa-1x" aria-hidden="true"></i></a></li>
-						<li><a href="https://github.com/MatteoBalboni/MatteoBalboni.github.io" title="Github"><i class="fa fa-github fa-1x" aria-hidden="true"></i></a></li>
+						<li><a href="https://github.com/MatteoBalboni/MatteoBalboni.github.io" title="Github" target = "_blank"><i class="fa fa-github fa-1x" aria-hidden="true"></i></a></li>
 					</ul>
 		        </div>
 			</div>
@@ -33,7 +33,7 @@
 
 		<div class="container">
 			<div class="jumbotron">
-				<a href="https://faire-un-don.greenpeace.fr/?codespec=N18FD&_ga=2.254350603.269318849.1516913556-1854578128.1516913556" title="Donate"><button type="button" class="btn btn-lg btn-success">DONATE</button></a>
+				<a href="https://faire-un-don.greenpeace.fr/?codespec=N18FD&_ga=2.254350603.269318849.1516913556-1854578128.1516913556" title="Donate" target = "_blank"><button type="button" class="btn btn-lg btn-success">DONATE</button></a>
 				<h1 class="grey-left">Explorer Bitcoin</h1>
 				<h2>Matteo BALBONI (matteo.balboni@devinci.fr)</h2>
 				<h2>Nicola ZOCCARATO (nicola.zoccarato@devinci.fr)</h2>
@@ -45,9 +45,9 @@
 		<img id="matteo" src="img\matteo1.jpg" alt="Matteo BALBONI"><br clear="all" />
 		<br>
 		<h1 class="grey">Nicola ZOCCARATO</h1>
-		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/nicola-zoccarato/" title="LinkedIn" target = "_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 		<h1 class="grey">Matteo BALBONI</h1>
-		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
+		<div class="text-center"> <a href="https://www.linkedin.com/in/matteo-balboni-5ba27312a/" title="LinkedIn" target = "_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a> </div>
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
